--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,11 @@
   "editor.renderControlCharacters": true,
   "editor.detectIndentation": false,
   "editor.renderWhitespace": "boundary",
-  "C_Cpp.errorSquiggles": "disabled"
+  "C_Cpp.errorSquiggles": "disabled",
+  "C_Cpp.clang_format_style": "{BasedOnStyle: Google, IndentWidth: 4}",
+  "files.associations": {
+    "*.tex": "tex",
+    "stdio.h": "c",
+    "main.h": "c"
+  }
 }
